# notion-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: auth.rs  mod.rs  pages.rs  search.rs
src/components/: controls.rs  mod.rs  search.rs
src/database/: mod.rs  user.rs
src/utils/: controls.rs  dimentions.rs  http.rs  mod.rs  search.rs
src/views/: auth.rs  favorites.rs  home.rs  login.rs  mod.rs  pages.rs  tables.rs
