[package]
name = "notion_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
fuzzy-matcher = "0.3.7"
indexmap = "2.4.0"
notion = "0.6.0"
rouille = "3.6.2"
webbrowser = "1.0.2"
regex = "1.7.0"
url = "2.2"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
serde_json = "1.0"
dotenv = "0.15.0"
rusqlite = "0.32.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }